--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+/* ------------ reset ------------- */
 body {
   color: #4F4F4F;
 }
@@ -10,6 +11,9 @@ a {
 ul {
   list-style: none;
 }
+/* ------------ reset ------------- */
+
+/* ------------ nav ------------- */
 
 .me-img {
   width: 3rem;
@@ -35,13 +39,17 @@ ul {
   min-width: 380px;
 }
 
+/* ------------ nav ------------- */
+
+/* ------------ first section ------------- */
+
 .bg-custom {
-  height: 90vh;
+  height: 100vh;
   background: linear-gradient(to right, rgba(245, 245, 245, 0.8), rgba(245, 245, 245, 0.8)), url(./assets/common-bg.svg);
   background-position: center;
 }
 
-.social-shadow {
+.social-shadow,.nav-shadow {
   box-shadow: 0px 0px 20px 16px rgba(17, 17, 26, 0.08);
 }
 
@@ -64,4 +72,68 @@ ul {
   color: rgb(48, 48, 48);
   transform: translateY(-5px);
   box-shadow: 0px 0px 20px 16px rgba(17, 17, 26, 0.08);
+}
+
+.scroll-arrow{
+  transform: translateY(-27px);
+  animation: scrollFade 2.5s ease-out infinite;
+}
+
+/* ------------ first section ------------- */
+
+/* ------------ About section  ------------- */
+.line::after{
+  content: "";
+  position: absolute;
+  top: calc(100% + .5rem);
+  left: 50%;
+  height: 5px;
+  width: 4rem;
+  transform: translateX(-50%);
+  background-color: #D2B48C;
+  border-radius: 5px;
+}
+/* ------------ About section  ------------- */
+
+/* ------------ Skills section  ------------- */
+.carousel-container{
+  animation: scrollStacks 40s linear infinite;
+  width: max-content;
+}
+
+.carousel-container img{
+  margin-left: 5rem;
+  width: 5rem;
+}
+
+.paused{
+  animation-play-state: paused;
+}
+/* ------------ Skills section  ------------- */
+
+@keyframes scrollFade {
+  0%{
+    transform: translateY(-27px);
+    opacity: 0.8;
+  }
+
+  50%{
+    transform: translateY(-20px);
+    opacity: 0.5;
+  }
+
+  100%{
+    transform: translateY(0);
+    opacity: 0;
+  }
+}
+
+@keyframes scrollStacks {
+  0% {
+    transform: translateX(0);
+  }
+
+  100% {
+    transform: translateX(-50%);
+  }
 }
