--- a/style.css
+++ b/style.css
@@ -157,6 +157,11 @@ ul {
   color: red;
 }
 
+.legend {
+  font-size: 0.5rem;
+}
+
+
 /* ------------ Projects section  ------------- */
 
 /* ------------ Footer section  ------------- */
